--- a/frontend/styles/styles.css
+++ b/frontend/styles/styles.css
@@ -97,12 +97,17 @@ h3 button {
   border: none;
 }
 
-.star {
+.cereal {
   background-color: #fff9f6;
   border: 1px solid lightgray;
   padding: 0.8rem;
 }
 
-.star p {
+.cereal p {
   font-size: 0.8em;
+}
+
+.cereal p:nth-of-type(3) {
+  margin-top: 0.5rem;
+  color: #93005a
 }
